Footer - Remove max-width to avoid difference with navbar alignment

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,7 +8,7 @@
 .footer-content {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  max-width: 1200px;
+  /* max-width: 1200px; */
   gap: 10px 5px;
   text-align: left;
   padding-top: 15px;
